--- a/examples/semantic_engine/Cargo.toml
+++ b/examples/semantic_engine/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "coheron"
+name = "semantic_engine"
 authors = ["Neil Crago"]
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-rand = "0.9.2"
+coheron ={ path = "../../" }
