--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "coheron"
 authors = ["Neil Crago"]
 version = "0.1.0"
 edition = "2024"
+description = "A library for simulating and analyzing coherent wave phenomena"
+license = "MIT"
+keywords = ["wave", "simulation", "coherence", "physics", "numerical methods"]
+repository = "https://github.com/Neil-Crago/coheron"
 
 [dependencies]
 omni-wave = "0.2.1"
