--- a/examples/neuron/Cargo.toml
+++ b/examples/neuron/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2024"
 description = "A simple neuron model"
 
 [dependencies]
-coheron = {path = "../../../coheron"}
-curvature = {path = "../../../curvature"}
+coheron = "0.1.0"
+curvature = "0.1.0"
 rand = "0.9.2"
